{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 97,
  "lineage": "07789fcf-dbc8-8edf-8fda-d804daa6840a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848991144892:loadbalancer/app/ALB/dad8d4636226537c",
            "arn_suffix": "app/ALB/dad8d4636226537c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-683738661.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:848991144892:loadbalancer/app/ALB/dad8d4636226537c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0555d3642a8058598"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087e3d512063ea8cf"
              },
              {
                "subnet_id": "subnet-095b105827daa9f30"
              },
              {
                "subnet_id": "subnet-0ecdadfa89fe20870"
              }
            ],
            "subnets": [
              "subnet-087e3d512063ea8cf",
              "subnet-095b105827daa9f30",
              "subnet-0ecdadfa89fe20870"
            ],
            "vpc_id": "vpc-03b3c86e4e691c8ae",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.final4_igw",
            "aws_security_group.alb_sg",
            "aws_subnet.publicA",
            "aws_subnet.publicB",
            "aws_subnet.publicC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848991144892:listener/app/ALB/dad8d4636226537c/7f4d00c7c29eb273",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:848991144892:targetgroup/F4target/54acec0025a2852c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:848991144892:listener/app/ALB/dad8d4636226537c/7f4d00c7c29eb273",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:848991144892:loadbalancer/app/ALB/dad8d4636226537c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ALB",
            "aws_internet_gateway.final4_igw",
            "aws_lb_target_group.target_group",
            "aws_security_group.alb_sg",
            "aws_subnet.publicA",
            "aws_subnet.publicB",
            "aws_subnet.publicC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030a6f2963290389a",
            "domain": "vpc",
            "id": "eipalloc-030a6f2963290389a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-147-99.compute-1.amazonaws.com",
            "public_ip": "34.234.147.99",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final4_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:internet-gateway/igw-09d4bbc665357b61f",
            "id": "igw-09d4bbc665357b61f",
            "owner_id": "848991144892",
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:848991144892:targetgroup/F4target/54acec0025a2852c",
            "arn_suffix": "targetgroup/F4target/54acec0025a2852c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:848991144892:targetgroup/F4target/54acec0025a2852c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "F4target",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_alb.ALB",
            "aws_internet_gateway.final4_igw",
            "aws_security_group.alb_sg",
            "aws_subnet.publicA",
            "aws_subnet.publicB",
            "aws_subnet.publicC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "final4_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-030a6f2963290389a",
            "association_id": "eipassoc-006beb64c6ce4c807",
            "connectivity_type": "public",
            "id": "nat-0f6245bc05c003ea9",
            "network_interface_id": "eni-0a65dafb3ecbdbab9",
            "private_ip": "10.0.4.71",
            "public_ip": "34.234.147.99",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ecdadfa89fe20870"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f1e69977eeae53751080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f6245bc05c003ea9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f1e69977eeae5375",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.final4_ngw",
            "aws_route_table.private",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09d4bbc665357b61f",
            "id": "r-rtb-0339e03ea94378dfc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0339e03ea94378dfc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.final4_igw",
            "aws_route_table.public",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:route-table/rtb-0f1e69977eeae5375",
            "id": "rtb-0f1e69977eeae5375",
            "owner_id": "848991144892",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:route-table/rtb-0339e03ea94378dfc",
            "id": "rtb-0339e03ea94378dfc",
            "owner_id": "848991144892",
            "propagating_vgws": [],
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateA_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff73f8b453dc7595",
            "route_table_id": "rtb-0f1e69977eeae5375",
            "subnet_id": "subnet-0927eb67979077934"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateB_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-051a31f4906362fcb",
            "route_table_id": "rtb-0f1e69977eeae5375",
            "subnet_id": "subnet-0ec5ba49753d8d9e5"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateB",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateC_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c705c435c28b210",
            "route_table_id": "rtb-0f1e69977eeae5375",
            "subnet_id": "subnet-0ad5395a81e69252c"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicA_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c51dd22fb0ec87d",
            "route_table_id": "rtb-0339e03ea94378dfc",
            "subnet_id": "subnet-0ecdadfa89fe20870"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicB_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b38694ac241854",
            "route_table_id": "rtb-0339e03ea94378dfc",
            "subnet_id": "subnet-087e3d512063ea8cf"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicB",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicC_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eaf40d3fe2614c9",
            "route_table_id": "rtb-0339e03ea94378dfc",
            "subnet_id": "subnet-095b105827daa9f30"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:security-group/sg-0555d3642a8058598",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0555d3642a8058598",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "848991144892",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0927eb67979077934",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0927eb67979077934",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1a"
            },
            "tags_all": {
              "Name": "private-east-1a"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0ec5ba49753d8d9e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec5ba49753d8d9e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1b"
            },
            "tags_all": {
              "Name": "private-east-1b"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0ad5395a81e69252c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad5395a81e69252c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1c"
            },
            "tags_all": {
              "Name": "private-east-1c"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0ecdadfa89fe20870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecdadfa89fe20870",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1a"
            },
            "tags_all": {
              "Name": "public-east-1a"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-087e3d512063ea8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-087e3d512063ea8cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1b"
            },
            "tags_all": {
              "Name": "public-east-1b"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-095b105827daa9f30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095b105827daa9f30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1c"
            },
            "tags_all": {
              "Name": "public-east-1c"
            },
            "vpc_id": "vpc-03b3c86e4e691c8ae"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:vpc/vpc-03b3c86e4e691c8ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f4efe8b8a66bbcf",
            "default_route_table_id": "rtb-0f347f4cd0fdf61f6",
            "default_security_group_id": "sg-034a7825c8f4afd26",
            "dhcp_options_id": "dopt-0c27d785631fff1cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03b3c86e4e691c8ae",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f347f4cd0fdf61f6",
            "owner_id": "848991144892",
            "tags": {
              "Name": "final4_vpc"
            },
            "tags_all": {
              "Name": "final4_vpc"
            }
          }
        }
      ]
    }
  ]
}